[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoda-notes"
version = "0.1.0"
description = "Minimal local-first CLI for managing notes and tasks"
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = ["notes", "cli", "local-first", "markdown", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.scripts]
yo = "yoda.cli:main"

[tool.setuptools]
packages = ["yoda"]
